<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_cancel"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_top">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_payment_status">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_payment_status"
                        tools:text="PAID"
                        android:textSize="20sp"
                        android:textColor="@color/color_green"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_status_message"
                        tools:text="Ordered Confirmed"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_view_detail"
                    android:src="@drawable/ic_baseline_arrow_forward"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_order_id"
                android:orientation="horizontal"
                android:layout_below="@+id/layout_payment_status"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_id"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_order_id"
                    tools:text="T20015381231231231231231231231231231231231123"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_date_time"
                android:orientation="horizontal"
                android:layout_below="@+id/layout_order_id"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_time"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_date_time"
                    tools:text="20/01/2021 3:25 AM"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/layout_date_time"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_total_amount"
                    tools:text="MYR 25,000.00"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:id="@+id/image_line"
            android:background="@color/black"
            android:layout_below="@+id/layout_top"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_line">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:id="@+id/image_product"
                android:src="@drawable/example"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_detail"
                android:layout_toEndOf="@+id/image_product"
                android:layout_marginTop="7dp"
                android:layout_marginStart="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_title"
                    tools:text="Tan Tan Tan"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_package"
                    android:orientation="horizontal"
                    android:layout_below="@+id/text_title">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pack"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_package"
                        tools:text="Private Northern tour aaaaaaaaaaaaaaaaaaaaaaaaaaa"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_quantity"
                    android:orientation="horizontal"
                    android:layout_below="@+id/layout_package">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_quantity"
                        tools:text="1 - 2 Guests (Group of 1 - 2) x 1"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_location"
                    android:orientation="horizontal"
                    android:layout_below="@+id/layout_quantity">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_meetup_location"
                        tools:text="Gurney"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/layout_location">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/departure_date"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_departure_date"
                        tools:text="01/01/2021"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/layout_detail"
                android:weightSum="1.0">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight=".5"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_cancel"
                        android:text="@string/cancel_booking"
                        android:textColor="@color/color_darkgrey"
                        android:textAllCaps="false"
                        android:background="@drawable/button_cancel"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="10dp"
                        android:textAlignment="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight=".5"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_voucher"
                        android:text="@string/view_voucher"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:background="@drawable/button_view"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="10dp"
                        android:textAlignment="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>